# 2025_bang_repro

./: .gitignore  CMakeLists.txt  Makefile  README.md  bang_cagra_report.md  run.sh
bench/: bang_bench.cu  bang_build.cu  bench.sh  plot.py
common/: cuda_utils.cuh  fvecs_io.cuh  graph_io.cuh
engineered/: config.cuh  engineered_build.cu  engineered_build.cuh  engineered_main.cu  engineered_search.cu  engineered_search.cuh
plain/: config.cuh  plain_build.cu  plain_build.cuh  plain_main.cu  plain_search.cu  plain_search.cuh
report/: bang_audit_report.md  bang_repro_tests.md  bang_resource_plan.md  bang_source_map.md  bang_vs_cagra.md  bang_vs_cpu_diskann.md
results/: bang_official_sweep.csv  cagra_sift1m_sweep.csv  cuvs_sift1m_sweep.csv  sift1m_results.csv
scripts/: bang_preprocess.py  build_bang_base.sh  build_official_bang.sh  check_env.sh  compute_official_groundtruth.sh  convert_vecs_to_diskann_bin.sh  estimate_resources.py  parse_bang_output.py  plot_results.py  prepare_official_diskann_index.sh  run_official_bang.sh  run_sift10k_smoke.sh
src/: bang_index_reader.py
tools/: diskann_to_bang.cpp  fvecs_to_bin.cpp  verify_diskann.py  verify_graph_bin.py
